--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<div class="animal-photo">
-    <div class="photo-editing">
+	<main id="animal-photos">
+    <div id="photo-heading">
       Animal Photos
     </div>
     <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/camel.jpg" alt="camel">
@@ -20,7 +20,7 @@
     <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/tiger.jpg" alt="tiger">
     <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/wolf.jpg" alt="wolf">
 
-  </div>
+  </main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
